--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,12 @@
     "require": {
         "php":">=7.4||^8.0"
     },
+    "repositories": [
+        {
+            "type":"vcs",
+            "url":""
+        }
+    ],
     "autoload": {
         "psr-4": {
             "Humanrizki\\":"src/"
