--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "require": {
         "php":">=7.4||^8.0",
-        "humanrizki/studikasus-php-dasar-todolist":"1.1.0"
+        "humanrizki/todolist-php":"1.1.0"
     },
     "repositories": [
         {
