--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,7 @@
         }
     ],
     "require": {
-        "php":">=7.4||^8.0",
-        "humanrizki/todolist-php":"1.1.0"
+        "php":">=7.4||^8.0"
     },
     "repositories": [
         {
